<?xml version="1.0"?>
<package>
  <name>gripjava_messages</name>
  <version>0.0.1</version>
  <description>
    Message generation for grip
  </description>
  <url type="website">http://wpiroboticsprojects.github.io/GRIP/</url>
  <url type="repository">https://github.com/WPIRoboticsProjects/GRIP</url>
  <url type="bugtracker">https://github.com/WPIRoboticsProjects/GRIP/issues</url>
  <maintainer email="root@todo.todo">root</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>genjava</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>genjava</run_depend>
</package>
